--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Weather-Man Jones App</title>
+        <title>WeatherClear</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap" rel="stylesheet"> 
-        <script src="./script.js"></script>
+        <script src="./script.js" defer></script>
     </head>
 
     <body>
@@ -21,11 +21,13 @@
                 </path>
             </svg></button>
         </div>
-        <div class="weather">
+        <div class="weather loading">
             <h2 class="city">Weather in Manassas</h2>
             <h1 class="temp">86°f</h1>
-            <img src="" alt="" class="icon" />
-            <div class="description">Fair</div>
+            <div class="flex">
+                <img src="https://openweathermap.org/img/wn/01d.png" alt="" class="icon" />
+                <div class="description">Fair</div>
+            </div>
             <div class="humidity">Humidity: 37%</div>
             <div class="wind">Wind: 8 mph</div>
         </div>
